---
config:
  layout: elk
---
classDiagram
direction RL

    class Customer {
        +int id
        +String email
        +String firstName
        +String lastName
        +String phone
    }

    class Product {
        +int id
        +String name
        +String description
        +String imageBaseUrl
    }

    class ProductVariant {
        +int id
        +String color
        +int stock
        +Double price
        +String imageUrl
    }

    class Order {
        +int id
        +Date orderDate
        +Double totalAmount
        +Enum status
    }

    class OrderItem {
        +int id
        +int quantity
        +Double unitPrice
    }

    class Delivery {
        +int id
        +String address
        +String extraAddress
        +Enum status
        +Date estimatedDelivery
    }

    class Payment {
        +int id
        +Enum status
        +String transactionReference
        +Double amount
        +String paymentMethod
        +Date createdAt
        +Date updatedAt
    }

    %% Relaciones
    Customer "1" --> "0..*" Order : places
    Order "1" --> "1..*" OrderItem : contains
    OrderItem "1" --> "1" ProductVariant : refers
    Product "1" --> "1..*" ProductVariant: variants
    Order "1" --> "0..1" Delivery : delivers
    Order "1" --> "1" Payment : has
    Payment "1" --> "1" Order : belongs
